// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling
     
    $2.35
  </h1>
</div>
`;

exports[`should render ExpenseSummary with number total 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling
     
    $235,325,252,345.42
  </h1>
</div>
`;
